Fix Text Overlap Issue

--- a/packages/edit-site/src/components/page-patterns/style.scss
+++ b/packages/edit-site/src/components/page-patterns/style.scss
@@ -48,7 +48,7 @@
 		.components-heading {
 			flex-grow: 1;
 			flex-basis: 0;
-			white-space: normal;
+			white-space: nowrap;
 		}
 	}
 
